--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
 book_filename: "meteolandbook"
 delete_merged_file: true
-output_dir: "/home/miquel/Rservices/static/meteolandbook"
+output_dir: "docs/"
 language:
   ui:
     chapter_name: "Chapter "
